show projects list

--- a/src/main/resources/templates/layouts/auth_layout.html
+++ b/src/main/resources/templates/layouts/auth_layout.html
@@ -35,9 +35,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link un-line disabled" tabindex="-1"
-                               href="#"
-                               th:text="#{layout.menu.projects}" aria-disabled="true">Projects</a>
+                            <a class="nav-link un-line active" tabindex="-1"
+                               href="project/projects.html" th:href="@{/projects}"
+                               th:text="#{layout.menu.projects}">project</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link un-line active" tabindex="-1"
