--- a/src/main/resources/templates/person/add.html
+++ b/src/main/resources/templates/person/add.html
@@ -74,7 +74,7 @@
         <div class="mt-3">
             <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
                th:href="@{/persons}"
-               th:text="#{btn.cancel}">Confirm
+               th:text="#{btn.cancel}">cancel
             </a>
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
                     th:text="#{btn.confirm}">Confirm
