--- a/src/main/resources/templates/project/add.html
+++ b/src/main/resources/templates/project/add.html
@@ -10,7 +10,10 @@
 
     <form class="needs-validation login-form" novalidate
           th:action="@{/projects/save}" th:object="${project}" method="post">
-        <h1 th:text="#{project.add.label}"/>
+        <h1 th:switch="${project.id}">
+            <span th:case="null" th:text="#{project.add.title}">add</span>
+            <span th:case="*" th:text="#{project.edit.title}">edit</span>
+        </h1>
         <br>
 
         <input type="hidden" th:field="*{id}"/>
@@ -35,7 +38,7 @@
         <div class="mt-3">
             <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
                th:href="@{/projects}"
-               th:text="#{btn.close}">close</a>
+               th:text="#{btn.cancel}">cansel</a>
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
                     th:text="#{btn.confirm}">Confirm
             </button>
