remove dashboard from menu

--- a/src/main/resources/templates/layouts/auth_layout.html
+++ b/src/main/resources/templates/layouts/auth_layout.html
@@ -26,7 +26,8 @@
     <header class="mb-auto">
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand un-line" href="/dashboard.html" th:href="@{/dashboard}">Dashboard</a>
+                <a class="navbar-brand un-line" href="project/projects.html"
+                   th:href="@{/projects}" th:text="#{layout.menu.projects}">projects</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -34,11 +35,6 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link un-line active" tabindex="-1"
-                               href="project/projects.html" th:href="@{/projects}"
-                               th:text="#{layout.menu.projects}">project</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link un-line active" tabindex="-1"
                                href="issue/issues.html" th:href="@{/issues}"
