remove signup from menu

--- a/src/main/resources/templates/layouts/no_auth_layout.html
+++ b/src/main/resources/templates/layouts/no_auth_layout.html
@@ -22,8 +22,7 @@
         <div>
             <h3 class="float-md-start mb-0"><a href="layouts/no_auth_layout.html" th:href="@{/}" class="text-white no-line un-line">Bugtracker</a></h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link active" aria-current="page" href="dashboard.html" th:href="@{/dashboard}" th:text="#{login.label}">Sign in</a>
-                <a class="nav-link" href="security/signup.html" th:href="@{/signup}" th:text="#{login.signUp}">Sign up</a>
+                <a class="nav-link active" aria-current="page" href="dashboard.html" th:href="@{/projects}" th:text="#{login.label}">Sign in</a>
             </nav>
         </div>
     </header>
