change the add icon

--- a/src/main/resources/static/css/auth_layout.css
+++ b/src/main/resources/static/css/auth_layout.css
@@ -6,8 +6,15 @@ a:hover.un-line {
     text-decoration: underline;
 }
 
+a:hover.boots-ico {
+    color: grey;
+}
+
 button:hover.un-line {
     text-decoration: underline;
+}
+a.boots-ico {
+    color: #fff;
 }
 
 body {
