--- a/src/main/resources/templates/issue/add.html
+++ b/src/main/resources/templates/issue/add.html
@@ -48,7 +48,7 @@
     </div>
     <div class="form-group">
       <label th:text="#{issue.add.description}"></label>
-      <input type="text" class="form-control"
+      <textarea type="text" class="form-control"
              th:field="*{description}" th:placeholder="#{person.add.placeholder}"/>
     </div>
     <div class="form-group">
