--- a/src/main/resources/templates/project/add.html
+++ b/src/main/resources/templates/project/add.html
@@ -33,7 +33,7 @@
         </div>
         <div class="form-group">
             <label th:text="#{project.add.description}"></label>
-            <input type="text" class="form-control" th:field="*{description}" th:placeholder="#{person.add.placeholder}"/>
+            <textarea class="form-control" th:field="*{description}" th:placeholder="#{person.add.placeholder}"/>
         </div>
         <div class="mt-3">
             <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
