--- a/src/main/resources/templates/issue/add.html
+++ b/src/main/resources/templates/issue/add.html
@@ -8,94 +8,97 @@
 
 <div layout:fragment="main-content">
 
-  <form class="login-form" th:action="@{/issues/save}"
-        th:object="${issue}" method="post">
-    <h1 th:switch="${issue.id}">
-      <span th:case="null" th:text="#{issue.add.title}">add</span>
-      <span th:case="*" th:text="#{issue.edit.title}">edit</span>
-    </h1>
+    <form class="login-form" th:action="@{/issues/save}"
+          th:object="${issue}" method="post">
+        <h1 th:switch="${issue.id}">
+            <span th:case="null" th:text="#{issue.add.title}">add</span>
+            <span th:case="*" th:text="#{issue.edit.title}">edit</span>
+        </h1>
 
-    <br>
-    <input type="hidden" th:field="*{id}"/>
-    <div class="form-group">
-      <select th:class="'form-control ' + ${#fields.hasErrors('project') ? 'is-invalid' : ''}"
-              th:field="*{project}" class="form-select" aria-label="Default select example">
-        <option th:value="${null}" th:text="#{issue.add.project}"></option>
-        <option th:each="project : ${projects}"
-                th:value="${project.id}"
-                th:text="${project.name}"></option>
-      </select>
-        <small th:if="${#fields.hasErrors('project')}" th:errors="*{project}"
-               class="text-danger"></small>
-    </div>
-    <div class="form-group">
-      <select th:class="'form-control ' + ${#fields.hasErrors('assignee') ? 'is-invalid' : ''}"
-              th:field="*{assignee}" class="form-select" aria-label="Default select example">
-        <option th:value="${null}" th:text="#{issue.add.assignee}"></option>
-        <option th:each="assignee : ${assignees}"
-                th:value="${assignee.id}"
-                th:text="${assignee.userRealName}">assignee</option>
-      </select>
-        <small th:if="${#fields.hasErrors('assignee')}" th:errors="*{assignee}"
-               class="text-danger"></small>
-    </div>
-    <div class="form-group">
-      <label th:text="#{issue.add.name}"> name </label>
-      <input th:class="'form-control ' + ${#fields.hasErrors('name') ? 'is-invalid' : ''}"
-             th:field="*{name}"/>
-      <small th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-             class="text-danger"></small>
-    </div>
-    <div class="form-group">
-      <label th:text="#{issue.add.description}"></label>
-      <textarea type="text" class="form-control"
-             th:field="*{description}" th:placeholder="#{person.add.placeholder}"/>
-    </div>
-    <div class="form-group">
-      <label th:text="#{issue.add.code}"> name </label>
-      <input th:class="'form-control ' + ${#fields.hasErrors('code') ? 'is-invalid' : ''}"
-             th:field="*{code}"/>
-      <small th:if="${#fields.hasErrors('code')}" th:errors="*{code}"
-             class="text-danger"></small>
-    </div>
-    <div class="form-group row">
-      <ul>
-        <li th:each="priority : ${priorities}">
-          <input type="radio" th:field="*{priority}" th:value="${priority.id}" />
-          <label th:for="${#ids.prev('priority')}"
-                 th:text="#{${'priority.' + priority.name}}">priority</label>
-        </li>
-      </ul>
-    </div>
-    <div class="form-group row">
-      <ul>
-        <li th:each="status : ${statuses}">
-          <input type="radio" th:field="*{status}" th:value="${status.id}" />
-          <label th:for="${#ids.prev('status')}"
-                 th:text="#{${'status.' + status.name}}">status</label>
-        </li>
-      </ul>
-    </div>
-    <div class="form-group row">
-      <ul>
-        <li th:each="type : ${types}">
-          <input type="radio" th:field="*{type}" th:value="${type.id}" />
-          <label th:for="${#ids.prev('type')}"
-                 th:text="#{${'type.' + type.name}}">type</label>
-        </li>
-      </ul>
-    </div>
+        <br>
+        <input type="hidden" th:field="*{id}"/>
+        <div class="form-group">
+            <select th:class="'form-control ' + ${#fields.hasErrors('project') ? 'is-invalid' : ''}"
+                    th:field="*{project}" class="form-select" aria-label="Default select example">
+                <option th:value="${null}" th:text="#{issue.add.project}"></option>
+                <option th:each="project : ${projects}"
+                        th:value="${project.id}"
+                        th:text="${project.name}"></option>
+            </select>
+            <small th:if="${#fields.hasErrors('project')}" th:errors="*{project}"
+                   class="text-danger"></small>
+        </div>
+      <br>
+        <div class="form-group">
+            <select th:class="'form-control ' + ${#fields.hasErrors('assignee') ? 'is-invalid' : ''}"
+                    th:field="*{assignee}" class="form-select" aria-label="Default select example">
+                <option th:value="${null}" th:text="#{issue.add.assignee}"></option>
+                <option th:each="assignee : ${assignees}"
+                        th:value="${assignee.id}"
+                        th:text="${assignee.userRealName}">assignee
+                </option>
+            </select>
+            <small th:if="${#fields.hasErrors('assignee')}" th:errors="*{assignee}"
+                   class="text-danger"></small>
+        </div>
+        <div class="form-group">
+            <label th:text="#{issue.add.name}"> name </label>
+            <input th:class="'form-control ' + ${#fields.hasErrors('name') ? 'is-invalid' : ''}"
+                   th:field="*{name}"/>
+            <small th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                   class="text-danger"></small>
+        </div>
+        <div class="form-group">
+            <label th:text="#{issue.add.description}"></label>
+            <textarea type="text" class="form-control"
+                      th:field="*{description}" th:placeholder="#{person.add.placeholder}"/>
+        </div>
+        <div class="form-group">
+            <label th:text="#{issue.add.code}"> name </label>
+            <input th:class="'form-control ' + ${#fields.hasErrors('code') ? 'is-invalid' : ''}"
+                   th:field="*{code}"/>
+            <small th:if="${#fields.hasErrors('code')}" th:errors="*{code}"
+                   class="text-danger"></small>
+        </div>
+        <div class="row">
 
-    <div class="mt-3">
-      <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
-         th:href="@{/issues}"
-         th:text="#{btn.cancel}">Confirm
-      </a>
-      <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
-              th:text="#{btn.confirm}">Confirm
-      </button>
-    </div>
-  </form>
+            <div class="col-4 form-group">
+              <h4 th:text="#{issue.add.priority}"></h4>
+                    <p th:each="priority : ${priorities}">
+                        <input type="radio" th:field="*{priority}" th:value="${priority.id}"/>
+                        <label th:for="${#ids.prev('priority')}"
+                               th:text="#{${'priority.' + priority.name}}">priority</label>
+                    </p>
+            </div>
+            <div class="col-4 form-group">
+              <h4 th:text="#{issue.add.status}"></h4>
+                    <p th:each="status : ${statuses}">
+                        <input type="radio" th:field="*{status}" th:value="${status.id}"/>
+                        <label th:for="${#ids.prev('status')}"
+                               th:text="#{${'status.' + status.name}}">status</label>
+                    </p>
+            </div>
+            <div class="col-4 form-group">
+              <h4 th:text="#{issue.add.type}"></h4>
+                    <p th:each="type : ${types}">
+                        <input type="radio" th:field="*{type}" th:value="${type.id}"/>
+                        <label th:for="${#ids.prev('type')}"
+                               th:text="#{${'type.' + type.name}}">type</label>
+                    </p>
+            </div>
+
+        </div>
+
+        <div class="mt-3">
+            <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
+               th:href="@{/issues}"
+               th:text="#{btn.cancel}">Confirm
+            </a>
+            <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
+                    th:text="#{btn.confirm}">Confirm
+            </button>
+        </div>
+    </form>
 
 
 </div>
