--- a/src/main/resources/templates/person/persons.html
+++ b/src/main/resources/templates/person/persons.html
@@ -8,6 +8,8 @@
 
 <div layout:fragment="main-content">
 
+    <div class="pageTitle" th:text="#{layout.menu.users}"></div>
+
     <a href="about" th:href="@{/persons/add}" class="boots-ico justify-content-center float-md-end"
        data-bs-toggle="tooltip" data-bs-placement="left" title="Tooltip on top">
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
