--- a/src/main/resources/templates/project/projects.html
+++ b/src/main/resources/templates/project/projects.html
@@ -7,6 +7,7 @@
 <body>
 
 <div layout:fragment="main-content">
+    <div class="pageTitle" th:text="#{layout.menu.projects}"></div>
 
     <a href="about" th:href="@{/projects/add}" class="boots-ico justify-content-center float-md-end"
        data-bs-toggle="tooltip" data-bs-placement="left" title="Tooltip on top">
