--- a/src/main/resources/templates/issue/issues.html
+++ b/src/main/resources/templates/issue/issues.html
@@ -8,6 +8,9 @@
 
 
 <div layout:fragment="main-content">
+
+    <div class="pageTitle" th:text="#{layout.menu.issues}"></div>
+
     <div>
         <a href="add.html" th:href="@{/issues/add}" class="boots-ico float-md-end"
            data-bs-toggle="tooltip" data-bs-placement="left" title="Tooltip on top">
