--- a/src/main/resources/templates/layouts/auth_layout.html
+++ b/src/main/resources/templates/layouts/auth_layout.html
@@ -28,23 +28,24 @@
             <div class="container-fluid">
                 <a class="navbar-brand un-line" href="project/projects.html"
                    th:href="@{/projects}" th:text="#{layout.menu.projects}">projects</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand un-line"
+                   href="issue/issues.html" th:href="@{/issues}"
+                   th:text="#{layout.menu.issues}">Issues</a>
+                <a class="navbar-brand un-line"
+                   href="person/persons.html" th:href="@{/persons}"
+                   th:text="#{layout.menu.users}">Users</a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link un-line active" tabindex="-1"
-                               href="issue/issues.html" th:href="@{/issues}"
-                               th:text="#{layout.menu.issues}">Issues</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link un-line" aria-current="page"
-                               href="person/persons.html" th:href="@{/persons}"
-                               th:text="#{layout.menu.users}">Users</a>
-                        </li>
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link un-line active"-->
+<!--                               href="issue/issues.html" th:href="@{/issues}"-->
+<!--                               th:text="#{layout.menu.issues}">Issues</a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link un-line active"-->
+<!--                               href="person/persons.html" th:href="@{/persons}"-->
+<!--                               th:text="#{layout.menu.users}">Users</a>-->
+<!--                        </li>-->
                     </ul>
                     <nav class="nav nav-masthead justify-content-center float-md-end">
                         <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
