--- a/src/main/resources/templates/layouts/auth_layout.html
+++ b/src/main/resources/templates/layouts/auth_layout.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl" class="h-100"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,59 +22,8 @@
 </head>
 <body class="d-flex h-100 text-center text-white bg-dark">
 <div class="container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <header class="mb-auto">
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand un-line" href="project/projects.html"
-                   th:href="@{/projects}" th:text="#{layout.menu.projects}">projects</a>
-                <a class="navbar-brand un-line"
-                   href="issue/issues.html" th:href="@{/issues}"
-                   th:text="#{layout.menu.issues}">Issues</a>
-                <a class="navbar-brand un-line"
-                   href="person/persons.html" th:href="@{/persons}"
-                   th:text="#{layout.menu.users}">Users</a>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<!--                        <li class="nav-item">-->
-<!--                            <a class="nav-link un-line active"-->
-<!--                               href="issue/issues.html" th:href="@{/issues}"-->
-<!--                               th:text="#{layout.menu.issues}">Issues</a>-->
-<!--                        </li>-->
-<!--                        <li class="nav-item">-->
-<!--                            <a class="nav-link un-line active"-->
-<!--                               href="person/persons.html" th:href="@{/persons}"-->
-<!--                               th:text="#{layout.menu.users}">Users</a>-->
-<!--                        </li>-->
-                    </ul>
-                    <nav class="nav nav-masthead justify-content-center float-md-end">
-                        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-                            <ul class="navbar-nav">
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle active" aria-current="page" href="#"
-                                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown"
-                                       aria-expanded="false">
-                                        <span sec:authentication="name">user</span>
-                                    </a>
-                                    <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end"
-                                        aria-labelledby="navbarDarkDropdownMenuLink">
-                                        <li><a class="dropdown-item" href="user-settings.html" th:href="@{/persons/settings}"
-                                               th:text="#{layout.menu.user.settings}">settings</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li>
-                                            <form th:action="@{/logout}" method="post" class="form-inline">
-                                                <input type="submit" th:value="#{login.logout}" class="dropdown-item"/>
-                                            </form>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </nav>
+
+    <header th:replace="layouts/header :: header">
     </header>
 
     <main class="px-3" layout:fragment="main-content">
