--- a/src/main/resources/templates/person/edit.html
+++ b/src/main/resources/templates/person/edit.html
@@ -8,8 +8,6 @@
 
 <div layout:fragment="main-content">
 
-
-
   <form class="login-form"
         th:action="@{/persons/update}" th:object="${editPerson}" method="post">
 
@@ -24,6 +22,7 @@
     <br>
 
     <input type="hidden" th:field="*{id}"/>
+    <input type="hidden" th:field="*{settings}">
     <div class="form-group">
       <label for="input-real_name" class="form-label" th:text="#{person.add.user_real_name}">real name</label>
       <input th:class="'form-control ' + ${#fields.hasErrors('userRealName') ? 'is-invalid' : ''}"
@@ -63,6 +62,12 @@
       <input th:if="${editPerson.settings}" type="hidden" th:field="*{authorities}"/>
     <div class="mt-3">
       <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
+         th:if="${editPerson.settings}"
+         th:href="@{/projects}"
+         th:text="#{btn.cancel}">cancel
+      </a>
+      <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
+         th:unless="${editPerson.settings}"
          th:href="@{/persons}"
          th:text="#{btn.cancel}">cancel
       </a>
