--- a/src/main/resources/templates/person/password.html
+++ b/src/main/resources/templates/person/password.html
@@ -34,7 +34,7 @@
         </div>
         <div class="mt-3">
             <a class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
-               th:href="@{/persons/edit(id=${editPassword.id})}"
+               th:href="@{/persons/settings}"
                th:text="#{btn.cancel}">cancel
             </a>
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line"
