--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -18,11 +18,13 @@
         <br>
         <div class="form-group">
             <label for="username" th:text="#{login.user}">user</label>
-            <input id="username" type="text" name="username" class="form-control"/>
+            <input id="username" type="text" name="username" class="form-control"
+            placeholder="Wpisz: root"/>
         </div>
         <div class="form-group">
             <label for="password" th:text="#{login.password}">pass</label>
-            <input id="password" type="password" name="password" class="form-control"/>
+            <input id="password" type="password" name="password" class="form-control"
+            placeholder="Wpisz: password"/>
         </div>
         <div class="mt-3">
             <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white un-line" th:text="#{btn.confirm}">Confirm</button>
